Fix menu spacing
Still delicate but fine for now

--- a/components/HeaderMenu/index.scss
+++ b/components/HeaderMenu/index.scss
@@ -4,7 +4,7 @@
   display: none;
   min-width: 220px;
   position: absolute;
-  top: $unit * 5; // This shouldn't be hardcoded. How to calculate it?
+  top: $unit * 5.75; // This shouldn't be hardcoded. How to calculate it?
   // Also, add space that doesn't make the menu disappear if you move your mouse slowly
   z-index: 10;
 }
